# ankibenefitbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-production.yml  linters.yml
bot/: __main__.py  backend_pre_start.py  init.py  runners.py
bot/api/google_sheets/: anki_sheet.py
bot/core/: config.py  db.py
bot/crud/: answers_questions_db.py  users_channel_db.py  users_db.py  users_lidmagnit_db.py
bot/db/: models.py  session.py
bot/dialogs/: __init__.py  chat_join_request.py  start.py
bot/dialogs/menu/: __init__.py  error.py
bot/dialogs/menu/admin/: callbacks.py  getters.py  states.py  windows.py
bot/dialogs/menu/main/: callbacks.py  keyboards.py  states.py  text.py  windows.py
bot/dialogs/menu/questioning/: callbacks.py  states.py  text.py  windows.py
bot/dialogs/menu/result_questioning/: callbacks.py  keyboards.py  states.py  text.py  windows.py
bot/dialogs/menu/two_menu/: callbacks.py  keyboards.py  states.py  (+2 more)
bot/handlers/: __init__.py  chat_join_request.py
bot/handlers/users/: admin.py
bot/middlewares/: __init__.py  middleware.py
bot/utils/: bot_commands.py  logging.py  scheduler.py
migrations/: env.py
migrations/versions/: 2025-03-17-d0cffdce74e0_init.py  2025-03-18-01808ccf68fd_create_datetime.py  2025-03-18-8281a859d6c9_clicked.py  2025-03-20-a1912b719776_users_channel.py  2025-03-26-3415570f543b_lidmagnit.py
scripts/: git_push_tags.sh  lint.sh  prestart.sh
