[project]
name = "ankibenefitbot"
version = "1.8.0"
description = ""
readme = "README.md"
authors = [
    { name = "Alex Tarasov" }
]
requires-python = ">=3.12"
dependencies = [
    "aiogram >= 3.19.0, < 3.20.0",
    "aiogram-dialog >= 2.3.1, < 2.4.0",
    "alembic >= 1.15.1, < 1.16.0",
    "apscheduler >= 3.11.0, < 3.12.0",
    "gspread >= 6.2.0, < 6.3.0",
    "pydantic-settings >= 2.8.1, < 2.9.0",
    "redis[hiredis] >= 5.2.1, < 5.3.0",
    "sqlalchemy[postgresql-asyncpg] >= 2.0.39, < 2.1.0",
    "tenacity == 9.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<1.20.0",
    "pre-commit >= 4.1.0, < 4.2.0",
    "ruff >= 0.11.0, < 0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"
exclude = [ "bot/dialogs/**/text.py" ]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
    "B",
    "PLC",
    "I", # imports
    "C",
    "PLW",
    "UP",
#    "FIX" # resolving tоdo
    "ISC", # implicit-str-concat
#    "DTZ",
    "PLR1714", # in (0, 1)
    "ASYNC",
#    "ANN" # аннотации
    "G004",
    "TC003",
    "ANN201",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv", "tests"]
